--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
         </form>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cerrar Sesión</a></li>
+          <li><a href="index.html"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cerrar Sesión</a></li>
 
         </ul>
       </div>
