--- a/profile.html
+++ b/profile.html
@@ -84,68 +84,68 @@
           <div class="carousel carousel-showsixmoveone slide" id="carousel123">
             <div class="carousel-inner">
               <div class="item">
-                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
-                <div class="hidden-xs-12 col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
+                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="http://www.filarmonia.org/image.axd?picture=2016%2F2%2F500x500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs-12 col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://www.moviescoremedia.com/covers/2016/hallow.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://78.media.tumblr.com/06dc5e939348a4949578db37c9a32344/tumblr_nufp2a3U2a1qmwd3eo1_500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://i.pinimg.com/736x/02/71/df/0271df6af1c6f18f8a1b822ba1464aa5--katharine-hepburn-kate-hepburn.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="http://agenda.devenado.com/IMG/el-origen-del-terror-en-amityville-cine-id11061_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="http://agenda.devillamercedes.com/IMG/mio-o-de-nadie-2d-sub-id8004_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
               </div>
               <div class="item">
-                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
+                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://www.moviescoremedia.com/covers/2016/hallow.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://78.media.tumblr.com/06dc5e939348a4949578db37c9a32344/tumblr_nufp2a3U2a1qmwd3eo1_500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://i.pinimg.com/736x/02/71/df/0271df6af1c6f18f8a1b822ba1464aa5--katharine-hepburn-kate-hepburn.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="http://agenda.devenado.com/IMG/el-origen-del-terror-en-amityville-cine-id11061_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="http://agenda.devillamercedes.com/IMG/mio-o-de-nadie-2d-sub-id8004_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="http://agenda.devenado.com/IMG/el-hilo-rojo-id6659_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
               </div>
               <div class="item">
                 <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://i.pinimg.com/736x/02/71/df/0271df6af1c6f18f8a1b822ba1464aa5--katharine-hepburn-kate-hepburn.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="http://agenda.devenado.com/IMG/el-origen-del-terror-en-amityville-cine-id11061_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="http://agenda.devillamercedes.com/IMG/mio-o-de-nadie-2d-sub-id8004_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="http://agenda.devenado.com/IMG/el-hilo-rojo-id6659_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
                 <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
               </div>
               <div class="item">
                 <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="http://agenda.devenado.com/IMG/el-origen-del-terror-en-amityville-cine-id11061_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="http://agenda.devillamercedes.com/IMG/mio-o-de-nadie-2d-sub-id8004_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
                 <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://ecx.images-amazon.com/images/I/61XAyISx24L._SL500_.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="http://www.filarmonia.org/image.axd?picture=2016%2F2%2F500x500.jpg" class="img-responsive"></a></div>
               </div>
               <div class="item">
                 <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="http://agenda.devillamercedes.com/IMG/mio-o-de-nadie-2d-sub-id8004_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="http://agenda.devenado.com/IMG/el-hilo-rojo-id6659_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
                 <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="http://www.filarmonia.org/image.axd?picture=2016%2F2%2F500x500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://www.moviescoremedia.com/covers/2016/hallow.jpg" class="img-responsive"></a></div>
               </div>
               <div class="item active">
-                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=6" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
+                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="http://agenda.devillamercedes.com/IMG/mio-o-de-nadie-2d-sub-id8004_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="http://agenda.devenado.com/IMG/el-hilo-rojo-id6659_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://ecx.images-amazon.com/images/I/61XAyISx24L._SL500_.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="http://www.filarmonia.org/image.axd?picture=2016%2F2%2F500x500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://www.moviescoremedia.com/covers/2016/hallow.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://78.media.tumblr.com/06dc5e939348a4949578db37c9a32344/tumblr_nufp2a3U2a1qmwd3eo1_500.jpg" class="img-responsive"></a></div>
               </div>
               <div class="item">
                 <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/eeeeee&amp;text=7" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://ecx.images-amazon.com/images/I/61XAyISx24L._SL500_.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="http://www.filarmonia.org/image.axd?picture=2016%2F2%2F500x500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://www.moviescoremedia.com/covers/2016/hallow.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://78.media.tumblr.com/06dc5e939348a4949578db37c9a32344/tumblr_nufp2a3U2a1qmwd3eo1_500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://i.pinimg.com/736x/02/71/df/0271df6af1c6f18f8a1b822ba1464aa5--katharine-hepburn-kate-hepburn.jpg" class="img-responsive"></a></div>
               </div>
               <div class="item">
-                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://placehold.it/500/40a1ff/002040&amp;text=8" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=1" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://placehold.it/500/002d5a/fff/&amp;text=2" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://placehold.it/500/d6d6d6/333&amp;text=3" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://placehold.it/500/002040/eeeeee&amp;text=4" class="img-responsive"></a></div>
-                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="https://placehold.it/500/0054A6/fff/&amp;text=5" class="img-responsive"></a></div>
+                <div class="col-xs-12 col-sm-4 col-md-2"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://ecx.images-amazon.com/images/I/61XAyISx24L._SL500_.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-1"><a href="#"><img src="http://www.filarmonia.org/image.axd?picture=2016%2F2%2F500x500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-2"><a href="#"><img src="https://ugc.kn3.net/i/760x/http://www.moviescoremedia.com/covers/2016/hallow.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-3"><a href="#"><img src="https://78.media.tumblr.com/06dc5e939348a4949578db37c9a32344/tumblr_nufp2a3U2a1qmwd3eo1_500.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-4"><a href="#"><img src="https://i.pinimg.com/736x/02/71/df/0271df6af1c6f18f8a1b822ba1464aa5--katharine-hepburn-kate-hepburn.jpg" class="img-responsive"></a></div>
+                <div class="hidden-xs col-sm-4 col-md-2 cloneditem-5"><a href="#"><img src="http://agenda.devenado.com/IMG/el-origen-del-terror-en-amityville-cine-id11061_1-w500-h500-m1.jpg" class="img-responsive"></a></div>
               </div>
             </div>
             <a class="left carousel-control" href="#carousel123" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
@@ -174,6 +174,9 @@
         <select class="menu-film">
           <option>Mis Eventos</option>
           <option>Próximos Eventos</option>
+          <option>Charlas</option>
+          <option>Ferias</option>
+          <option>Conversatorios</option>
         </select>
       </div>
       <!-- Fin Filtro desplegable -->
