modificando html y js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
   <title>7mo Arte</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">  
+
+  <link rel="stylesheet" href="assets/css/style.css">
+  
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCH63r8aIIhVnkMartgMMhmStfUYwNyQYQ",
+    authDomain: "gradibus-f20a6.firebaseapp.com",
+    databaseURL: "https://gradibus-f20a6.firebaseio.com",
+    projectId: "gradibus-f20a6",
+    storageBucket: "gradibus-f20a6.appspot.com",
+    messagingSenderId: "805999349197"
+  };
+    firebase.initializeApp(config);
+  </script>
+
 </head>
 <body>
 
@@ -372,6 +389,7 @@
   <!-- Scripts -->
 
 <!-- filtro de pelis -->
+<!--  
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-6 col-md-6">
@@ -383,7 +401,7 @@
       </div>
     </div>
   </div>
-
+-->
 
 
   <!-- Scripts -->
