Modificando estilos del filtro de películas con API

--- a/profile.html
+++ b/profile.html
@@ -247,6 +247,16 @@
   </nav>
   <!-- Fin Barra de navegación -->
 
+  <!-- lista de peliculas filtradas -->
+  <div class="container-fluid lista-container">
+    <div class="row">
+      <div class="lista">
+        <ul class="list-group" id="results" ></ul>
+      </div>
+    </div>
+  </div>
+    <!-- Sección de Películas -->
+
   <!-- Sección de mi perfil -->
   <section class=" container-fluid profile">
     <div class="user-box">
@@ -259,16 +269,6 @@
     </div>
   </section>
   <!-- Fin Sección de mi perfil -->
-
-<!-- lista de peliculas filtradas -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="lista">
-      <ul class="list-group" id="results" ></ul>
-    </div>
-  </div>
-</div>
-  <!-- Sección de Películas -->
   <!-- Filtro desplegable -->
   <div id="movies" class="container-fluid film">
     <div class="row">
