--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>7mo Arte</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Atma|Dancing+Script|Handlee|Lobster" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
@@ -246,13 +247,13 @@
             <input type="text" class="form-control" id="title" placeholder="Busca por título, año, director, país...">
           </div>
           <button type="submit" class="btn btn-default" id="searchBtn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right" id="listIni">
             <li><a href="#movies">Películas</a></li>
             <li><a href="#cinema">Salas de Cine</a></li>
             <li><a href="#events">Eventos</a></li>
           </ul>
         </form>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" id="finSection">
           <li><a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span></a></li>
           <li><a href="index.html"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cerrar Sesión</a></li>
 
@@ -388,7 +389,7 @@
       <!-- tittulo -->
       <div class="row">
         <div class="col-xs-offset-3 col-1-md col-md-offset-5">
-          <h2 class="title-cinemas">CINES</h2>
+          <h2 class="title-cinemas">Cines</h2>
         </div>
       </div>
 
