--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <title>7mo Arte</title>
+  <link href="https://fonts.googleapis.com/css?family=Atma|Dancing+Script|Handlee|Lobster" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -482,7 +483,7 @@
       <!-- tittulo -->
       <div class="row">
         <div class="col-xs-offset-3 col-1-md col-md-offset-5">
-          <h2 class="title-cinemas">CINES</h2>
+          <h2 class="title-cinemas">Cines</h2>
         </div>
       </div>
 
