--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
 
   <!-- seccion presentacion pag -->
   <section class=" container-fluid presentation">
-    <!-- <div class="user-box"> -->
+   <div class="user-box"  id="page1">
       <h1>7mo Arte</h1>
       <div class="row">
-        <div class="desc">
+        <div class="desc" id="text1">
           <cite>" 7mo Arte es un espacio donde podras encontrar informacion sobre lugares emblematicos que proyectan cine arte, de esta forma esperamos acercar al público curioso de conocer un cine de calidad; y facilitar a los fanaticos los distintos horarios de estas artes audiovisuales. "</cite>
         </div>
         <!-- fin col -->
@@ -383,7 +383,7 @@
     <div class="container-fluid film" id="film">
       <!-- tendency -->
       <div class="row">
-        <h2 class="title-ten">TENDENCIAS</h2>
+        <h2 class="title-ten">Tendencias</h2>
         <select class="menu-ten">
           <option>Peliculas</option>
           <option>Thriller</option>
