modificando index y haciendo arreglos

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
       <div class="row">
         <!-- thumbnail 1 -->
         <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
+          <div class="thumbnail" id="profileThumbnail">
             <img class="small-cinema" data-toggle="modal" data-target="#biografo" src="assets/img/cines/biografo.jpg" alt="biografo" style="height: 200px; width: 110%; display: block;">
             <div class="caption">
               <h3 class="title-small-cinema">El Biógrafo</h3>
@@ -529,7 +529,7 @@
       <div class="container-fluid film">
         <!-- fila para el titulo -->
         <div class="row">
-          <h2 class="title-ten">EVENTOS</h2>
+          <h2 class="title-ten">Eventos</h2>
         </div> <!-- fin fila titulo eventos -->
 
         <div class="bs-example" data-example-id="thumbnails-with-custom-content">
