Modificando estilos del modal de registro

--- a/profile.html
+++ b/profile.html
@@ -377,11 +377,11 @@
 
   <!-- seccion de cines artes -->
   <section>
-    <div class="container-fluid cinemas" id="cinemas">
+    <div class="container-fluid cinemas" id="cinema">
       <!-- tittulo -->
       <div class="row">
-        <div class="col-xs-offset-3 col-1-md col-md-offset-5">
-          <h2 class="title-cinemas">Cines</h2>
+        <div>
+          <h2 class="title-cinemas">Salas de Cine</h2>
         </div>
       </div>
 
@@ -594,7 +594,7 @@
     <!-- Fin de Próximos eventos -->
 
     <!-- Sección footer -->
-    <footer class="container-fluid footer" style="margin: 0;">
+    <footer class="container-fluid footer">
       <div class="row">
         <div class="text-center center-block">
                  <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
