Agregando btn de iniciar con facebook

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                       <div class="row">
                         <div class="col-sm-6 col-sm-offset-3">
                           <button type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" onclick="ingresar()" value="Log In">Iniciar Sesión</button>
+                           <p style="text-align:center;">O</p>
+                          <button type="submit" name="login-submit" tabindex="4"class="form-control btn btn-fcbk"><a href="profile.html">INICIAR VÍA FACEBOOK <i class="fa fa-facebook-square social"></i></a></button>
                         </div>
                       </div>
                     </div>
