--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Atma|Dancing+Script|Handlee|Lobster" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
 </head>
@@ -235,7 +236,7 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <form class="navbar-form navbar-left" role="search">
+        <form class="navbar-form navbar-left" role="search" action="javascript:void(0)">
           <div class="form-group">
             <input type="text" class="form-control" id="title" placeholder="Busca por título, año, director, país...">
           </div>
